--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="br.com.likeflix">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".application.LikeFlixApplication"
         android:allowBackup="false"
@@ -9,8 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:theme="@style/AppTheme" />
-
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".ui.HomeActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.moviedetail.MovieDetailActivity"
+            android:screenOrientation="portrait" />
+    </application>
 </manifest>
