--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -4,7 +4,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-      - name: Build the app
-        run: ./gradlew build
+      build:
+        - name: Build the app
+          run: ./gradlew build
+
+        apk:
+          name: Generate APK
+          runs-on: ubuntu-18.04
+
+          steps:
+            - uses: actions/checkout@v1
+            - name: set up JDK 1.8
+              uses: actions/setup-java@v1
+              with:
+                java-version: 1.8
+            - name: Build debug APK
+              run: bash ./gradlew assembleDebug --stacktrace
+            - name: Upload APK
+              uses: actions/upload-artifact@v1
+              with:
+                name: app
+                path: app/build/outputs/apk/debug/app-debug.apk
