--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,11 +1,40 @@
-name: Build
-on: [pull_request, push]
+name: Android Pull Request & Master CI
+
+on:
+  pull_request:
+    branches:
+      - 'master'
+  push:
+    branches:
+      - 'master'
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  name: Build APP
+  runs-on: ubuntu-18.04
+  run: bash ./gradlew build
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-18.04
+
     steps:
-      - name: Build the app
-        run: ./gradlew build
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
+
+  apk:
+    name: Generate APK
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Build debug APK
         run: bash ./gradlew assembleDebug --stacktrace
       - name: Upload APK
