--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,4 +1,4 @@
-name: Android Pull Request & Master CI
+name: android-master
 
 on:
   pull_request:
@@ -9,9 +9,6 @@ on:
       - 'master'
 
 jobs:
-  name: Build APP
-  runs-on: ubuntu-18.04
-  run: bash ./gradlew build
   test:
     name: Run Unit Tests
     runs-on: ubuntu-18.04
@@ -24,6 +21,29 @@ jobs:
           java-version: 1.8
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
+      - name: Unit tests results
+        uses: actions/upload-artifact@v1
+        with:
+          name: unit-tests-results
+          path: app/build/reports/tests/testDebugUnitTest/index.html
+
+  lint:
+    name: Lint Check
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Lint debug flavor
+        run: bash ./gradlew lintDebug --stacktrace
+      - name: Lint results
+        uses: actions/upload-artifact@v1
+        with:
+          name: app
+          path: app/build/reports/lint-results-debug.html
 
   apk:
     name: Generate APK
