--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,4 +1,4 @@
-name: android-master
+name: Runner BRABOR
 
 on:
   pull_request:
@@ -9,8 +9,8 @@ on:
       - 'main'
 
 jobs:
-  test:
-    name: Run Unit Tests
+  build:
+    name: Build Project
     runs-on: ubuntu-18.04
 
     steps:
@@ -19,13 +19,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Unit tests
-        run: bash ./gradlew test --stacktrace
-      - name: Unit tests results
-        uses: actions/upload-artifact@v1
-        with:
-          name: unit-tests-results
-          path: app/build/reports/tests/testDebugUnitTest/index.html
+      - name: Build Project
+        run: bash ./gradlew build
 
   lint:
     name: Lint Check
@@ -44,6 +39,24 @@ jobs:
         with:
           name: app
           path: app/build/reports/lint-results-debug.html
+
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
+      - name: Unit tests results
+        uses: actions/upload-artifact@v1
+        with:
+          name: unit-tests-results
+          path: app/build/reports/tests/testDebugUnitTest/index.html
 
   apk:
     name: Generate APK
