--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,12 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
+    testOptions {
+        unitTests  {
+            includeAndroidResources = true
+        }
+    }
+
     defaultConfig {
         applicationId "br.com.likeflix"
         minSdkVersion 22
@@ -28,10 +34,12 @@ android {
         sourceCompatibility = "1.8"
         targetCompatibility = "1.8"
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
+
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -42,15 +50,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation "org.robolectric:robolectric:4.3"
+    testImplementation 'androidx.test:core:1.3.0'
     testImplementation "io.mockk:mockk:1.8.13"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "com.google.android.material:material:1.2.1"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
-    // Koin for Android
-    implementation "org.koin:koin-android:$koin_version"
-    // or Koin for Android Architecture ViewModel
+    // Koin AndroidX Scope feature
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+
+    // Koin Extended & experimental features
+    implementation "org.koin:koin-core-ext:$koin_version"
+
+    // Koin for Unit tests
+    testImplementation "org.koin:koin-test:$koin_version"
     //
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.cardview:cardview:1.0.0"
