--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 buildscript {
     ext {
         version_lifecycle_extensions = "2.0.0"
-        kotlin_version = "1.4.0"
+        kotlin_version = '1.3.41'
         version_coroutine = "1.3.4"
         dagger_version = "2.24"
-        koin_version = "2.1.3"
+        koin_version= "2.1.6"
         anko_version='0.10.8'
     }
     repositories {
